	  - the labelled observations selected through which.lbs and which.Order
	  - the shown non labelled observations (which are not in the previous set)
	    selected by which.nonlbs
	  - the non-shown observations (the remaining ones not contained in the former 2 grps)
	-> point attributes may either refer to prior selection or to post-selection in
       which case we have .npts variants	
	 
under the hood:
+ wherever possible also use q.l internally instead of q to 
  provide functionality in IRKernel
+ fixed omegahat.net issue (raised by K.Hornik,(24.10.2016, 18:08)

##############
v 2.6
##############

user-visible CHANGES:
+ title changed to title style / capitalization
+ introduced dropZeroDensity argument to ML estimators 
+ arguments panel.first, panel.last for plot-methods can now be lists
+ introduced returnlevelplot, a generalization of the respective
  diagnostic plot facility of package ismev
+ qqplot and returnlevelplot gain pattern substitution like plot in 
  titles and x/y axis lables
+ pattern substitution can now be switched on and off in all plot 
  functions according to argument withSubst
  
GENERAL ENHANCEMENTS:

under the hood:
+ zero dropping (see argument 'dropZeroDensity' above)
  --Optimizers like optim require finite values, so get problems when 
  negative loglikelihood is evaluated, so optionally, and by default,
  values with density/likelihood 0 are dropped from optimization
+ removed ::: internal dependencies (within distr-Fam of pkgs) by copying 
  respective routines
+ qqplot:
   * (already there for a while) gains ability to interchange x- and y-
      axis by argument 'datax' for compatibility with other qqplots 
   * gains new methods for object of class "Estimate" (which could also be 
     seen as "fitted" objects...)
   * additional argument added.points.CI to allow for  additional evaluation 
     points for the confidence intervals in the range of the seen data	 
   * now by default has datax = TRUE